<resources>
    <string name="action_settings">Settings</string>
    <string name="project">Project Connect</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>

    <string name="retype_password">Retype Password</string>


    <string name="welcome">Welcome to ProjectConnect: %1$s!</string>
    <string name="warning1">Incorrect Login or Password</string>
    <string name="proj_name">Name</string>


    <string name="app_name">My Application</string>
    <string name="make_project">Make Project</string>
    <string name="name">Name:</string>
    <string name="project_type">Type:</string>
    <string name="no_positions">Positions:</string>
    <string name="required_skills">Skills:</string>
    <string name="requires_field">List 3 key skills required</string>

    <string name="view_project">View Project</string>
    <string name="view">View</string>
    <string name="make">Make</string>
    <string name="apply">Apply to this Project!</string>
    <string name="projectname">Some Random Name</string>
    <string name="backpage">Back to View Projects</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_view">View</string>
    <string name="title_make">Make</string>
    <string name="title_profile">Profile</string>

</resources>
